--- a/themes/basic/layouts/_default/list.html
+++ b/themes/basic/layouts/_default/list.html
@@ -1,8 +1,13 @@
 {{ define "main" }}
+
   <h1>{{ .Title }}</h1>
+
   {{ .Content }}
-  {{ range .Pages }}
-    <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
-    {{ .Summary }}
-  {{ end }}
+  
+  <ul>
+      {{ range .Pages }}
+      <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+    {{ end }}
+  </ul>
+
 {{ end }}
