--- a/themes/basic/layouts/_default/single.html
+++ b/themes/basic/layouts/_default/single.html
@@ -1,10 +1,16 @@
-{{ define "main" }}
-  <h1>{{ .Title }}</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ .Site.Title }}</title>
+    <title>Document</title>
+</head>
+<body>
+    <h1>{{ .Site.Title }}</h1>
 
-  {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
-  {{ $dateHuman := .Date | time.Format ":date_long" }}
-  <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
+    <h2>{{ .Title }}</h2>
 
-  {{ .Content }}
-  {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
-{{ end }}
+    {{ .Content }}
+</body>
+</html>
