--- a/themes/basic/layouts/partials/header.html
+++ b/themes/basic/layouts/partials/header.html
@@ -1,2 +1,3 @@
-<h1>{{ site.Title }}</h1>
-{{ partial "menu.html" (dict "menuID" "main" "page" .) }}
+<header>
+    <h1>{{ .Site.Title }}</h1>
+</header>
