--- a/themes/basic/assets/css/style.scss
+++ b/themes/basic/assets/css/style.scss
@@ -9,21 +9,9 @@ nav, footer {
     text-align: center;
 }
 
-nav {
-    display: flex;
-    flex-direction: column;
-}
+@import 'navbar';
 
-nav > a {
-    flex: 1;
-    text-align: center;
-    text-decoration: none;
-    color: #fff;
-}
-
-@media only screen and (min-width: 768px) {
-    nav { flex-direction: row; }
-    
+@media only screen and (min-width: 768px) {    
     .project-container { display: flex; }
     .project-container .project-list { width: 80%;}
     .project-container .project {flex: 1;}
@@ -95,3 +83,8 @@ a.tag {
     }
 }
         
+figure img {
+    max-width: 100%;
+    height: auto;
+}
+    
